[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/start/Start.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.737255, 0.737255, 0.737255, 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends OptionButton

var paths
	
func _on_OptionButton_pressed():
	refresh()
		
func refresh():
	var prev = selected
	clear()
	paths = Game.addons.get_modes()
	
	for i in paths:
		add_item(i)
	
	
	if paths.size() > 0:
		if !prev > paths.size() - 1:
			select(prev)
		else:
			select(paths.size() - 1)
			
		emit_signal(\"item_selected\", selected)
"

[node name="Start new game" type="PanelContainer"]
margin_right = 192.0
margin_bottom = 94.0
rect_min_size = Vector2( 192, 94 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 189.0
margin_bottom = 78.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 186.0
margin_bottom = 21.0

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 30.0
margin_bottom = 18.0
rect_min_size = Vector2( 30, 0 )
theme = ExtResource( 1 )
text = "Mode:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/VBoxContainer"]
margin_left = 34.0
margin_right = 186.0
margin_bottom = 21.0
rect_min_size = Vector2( 150, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = " Choose Map.."
script = SubResource( 2 )

[node name="ModeMenuContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 186.0
margin_bottom = 27.0
theme = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 186.0
margin_bottom = 47.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "Online:"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 36.0
margin_right = 52.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 186.0
margin_bottom = 53.0
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 541.0
margin_bottom = 191.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 537.0
margin_bottom = 187.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 534.0
margin_bottom = 104.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 1.0
margin_right = 117.0
margin_bottom = 16.0
text = "Ping Port(TCP):"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_right = 534.0
margin_bottom = 18.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 23.0
margin_right = 117.0
margin_bottom = 38.0
text = "Game Port (UPD+TCP):"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_top = 22.0
margin_right = 534.0
margin_bottom = 40.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 45.0
margin_right = 117.0
margin_bottom = 60.0
text = "Bind IP:"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_top = 44.0
margin_right = 534.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "*"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 67.0
margin_right = 117.0
margin_bottom = 82.0
text = "Max Players (1-4095)"

[node name="LineEdit4" type="LineEdit" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_top = 66.0
margin_right = 534.0
margin_bottom = 84.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 88.0
margin_right = 117.0
margin_bottom = 103.0
text = "Host Resourcepacks:"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_top = 88.0
margin_right = 534.0
margin_bottom = 104.0
pressed = true
text = "When enabled any addons you have enabled will be downloaded by clients."

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 534.0
margin_bottom = 143.0
columns = 2

[node name="Label7" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer2"]
margin_right = 117.0
margin_bottom = 15.0
rect_min_size = Vector2( 117, 0 )
text = "Use WebSockets:"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer2"]
margin_left = 121.0
margin_right = 534.0
margin_bottom = 16.0
custom_colors/font_color_disabled = Color( 0.290196, 0.290196, 0.290196, 1 )
text = "For compatibilty with Web clients, instead of native TCP+UDP comminucation. "

[node name="Label4" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer2"]
margin_top = 20.0
margin_right = 117.0
margin_bottom = 35.0
text = "Server Message:"

[node name="TextEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 534.0
margin_bottom = 165.0
rect_min_size = Vector2( 0, 18 )
theme = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Label4" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 534.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0.235294, 0.235294, 0.235294, 1 )
text = "IP: * stands for all interfaces on this device."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 186.0
margin_bottom = 75.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 186.0
margin_bottom = 18.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/OptionButton" to="VBoxContainer/VBoxContainer/OptionButton" method="_on_OptionButton_pressed"]
[connection signal="toggled" from="VBoxContainer/GridContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="button_up" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/CheckBox" to="." method="_on_CheckBox_button_up"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
